# GRS

./: .gitignore  README.md  docker-compose.example.yml  docker-compose.yml  intent.example.yaml  intent.yaml  plan.txt  pyproject.toml  requirements.txt  sitecustomize.py
baseimage/: Dockerfile  start.sh
dns/: Dockerfile
engine/: Dockerfile  __init__.py  activity.py  app.py  main.py  monitor.py  observability.py  parser.py  planner.py  policy.py  provisioner.py  renderer.py  sdn.py  status.py
engine/static/: index.html
ibn_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ryu_app/: ibn_controller.py
templates/: bgpd.conf.j2  named.conf.local.j2  named.conf.options.j2  nginx_upstream.j2  ospfd.conf.j2  zebra.conf.j2  zone.j2  zone_reverse.j2
tests/: test_activity.py  test_app.py  test_main.py  test_monitor.py  test_observability.py  test_parser.py  test_planner.py  test_provisioner.py  test_renderer.py  test_sdn.py
